test/e2e/fixtures/host-double-cross-namespace/queries-http.json
[
  {
    "url": "/target-1/",
    "headers": {
      "Host": "tls-context-host-1"
    }
  },
  {
    "url": "/target-2/",
    "headers": {
      "Host": "tls-context-host-2"
    }
  }
]
