test/e2e/fixtures/host-double-cross-namespace/queries-https.json
[
  {
    "url": "/ambassador/v0/diag/?json=true&filter=errors",
    "headers": {
      "Host": "tls-context-host-1"
    },
    "insecure": true,
    "sni": true
  },
  {
    "url": "/target-1/",
    "headers": {
      "Host": "tls-context-host-1"
    },
    "insecure": true,
    "sni": true
  },
  {
    "url": "/target-2/",
    "headers": {
      "Host": "tls-context-host-1"
    },
    "insecure": true,
    "sni": true
  },
  {
    "url": "/target-1/",
    "headers": {
      "Host": "tls-context-host-2"
    },
    "insecure": true,
    "sni": true
  },
  {
    "url": "/target-2/",
    "headers": {
      "Host": "tls-context-host-2"
    },
    "insecure": true,
    "sni": true
  }
]
